@@ -313,7 +313,7 @@ public final class SiteUtil {
             new HashMap<>();
 
     /** Path to main source code folder. */
-    private static final String MAIN_FOLDER_PATH = Paths.get(
+    private static final String MAIN_FOLDER_PATH = Path.of(
             SRC, "main", "java", "com", "puppycrawl", "tools", "checkstyle").toString();
 
     /** List of files who are superclasses and contain certain properties that checks inherit. */
@@ -505,7 +505,7 @@ public final class SiteUtil {
      * @throws MacroExecutionException if an I/O error occurs.
      */
     public static Set<Path> getXdocsTemplatesFilePaths() throws MacroExecutionException {
-        final Path directory = Paths.get("src/site/xdoc");
+        final Path directory = Path.of("src/site/xdoc");
         try (Stream<Path> stream = Files.find(directory, Integer.MAX_VALUE,
                 (path, attr) -> {
                     return attr.isRegularFile()
@@ -1272,7 +1272,7 @@ public final class SiteUtil {
             throw new MacroExecutionException("Failed to get parent path for " + templatePath);
         }
         return templatePathParent
-                .relativize(Paths.get(SRC, "site/xdoc", document))
+                .relativize(Path.of(SRC, "site/xdoc", document))
                 .toString()
                 .replace(".xml", ".html")
                 .replace('\\', '/');
